--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,10 @@
         "php": ">=5.6.0",
         "ext-json": "*"
     },
-
-    "require-dev": {
-        "phpunit/phpunit": "^5.7"
+    "autoload": {
+        "psr-4": {
+            "LinJoe\\Addtran\\": "src/"
+        }
     }
 }
 
