--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,11 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Linqiao\\Addtran\\": "src/"
+        }
     }
 }
 
